<?xml version="1.0"?>
<package format="2">
  <name>hal_402_device_mgr_msgs</name>
  <version>0.0.0</version>
  <description>
    Message and service definitions for the hal_402_device package
  </description>

  <maintainer email="john@tormach.com">John Morris</maintainer>
  <author email="john@tormach.com">John Morris</author>

  <license>BSD</license>

  <url type="website">TODO</url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>

  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
