<?xml version="1.0"?>
<package>
  <name>movej_ik_server_msgs</name>
  <version>0.0.0</version>
  <description>
    Service definitions for the movej_ik_server package
  </description>

  <maintainer email="jkaminski@tormach.com">Jakub Kaminsky</maintainer>
  <author email="jkaminski@tormach.com">Jakub Kaminsky</author>

  <license>BSD</license>

  <url type="website">TODO</url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
