<?xml version="1.0"?>
<package format="2">
  <name>robot_command_msgs</name>
  <version>0.0.0</version>
  <description>
    Message and service definitions for the robot_command package
  </description>

  <maintainer email="alex@machinekoder.com">Alexander Rössler</maintainer>
  <author email="alex@machinekoder.com">Alexander Rössler</author>
  <author email="jakub.fiser@eryaf.com">Jakub Fišer</author>

  <license>BSD</license>

  <url type="website">TODO</url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>
  <depend>uuid_msgs</depend>

  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
