<?xml version="1.0"?>
<package>
  <name>robot_jog_msgs</name>
  <version>0.0.0</version>
  <description>
    Message and service definitions for the robot_jog package
  </description>

  <maintainer email="alex@machinekoder.com">Alexander Rössler</maintainer>
  <author email="alex@machinekoder.com">Alexander Rössler</author>

  <license>BSD</license>

  <url type="website">TODO</url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
