<?xml version="1.0"?>
<package format="2">
  <name>robot_ui_msgs</name>
  <version>0.1.0</version>
  <description>
    Message and service definitions for the robot_ui package
  </description>

  <maintainer email="jakub.fiser@eryaf.com">Jakub Fišer</maintainer>
  <author email="jakub.fiser@eryaf.com">Jakub Fišer</author>

  <license>BSD</license>

  <url type="website">https://tormach.com</url>

  <depend>std_msgs</depend>
  <depend>uuid_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
