<?xml version="1.0"?>
<package format="2">
  <name>ros_machinetalk_msgs</name>
  <version>0.1.0</version>
  <description>
    Messages for the ros_machinetalk package.
  </description>
  <maintainer email="alex@machinekoder.com">Alexander Rössler</maintainer>

  <license>BSD</license>

  <author email="alex@machinekoder.com">Alexander Rössler</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib_msgs</depend>

  <export>
    <architecture_independent/>
  </export>
</package>
